fix audio stutter bug, source: connecting player to pitchshifter in mastergrid

--- a/src/index.scss
+++ b/src/index.scss
@@ -147,7 +147,7 @@ body {
    position: fixed;
    justify-content: center;
    align-items: center;
-   border-color: rgb(114, 112, 112);
+   border-color: rgb(67, 66, 66);
    border-width: 1px;
    border-style: solid;
    // left: 32.95%;
